WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273990
Unreviewed, fix the visionOS build after
278598@main
https://bugs.webkit.org/show_bug.cgi?id=273990
Summary
Unreviewed, fix the visionOS build after 278598@main
Dan Glastonbury
Reported
2024-05-09 23:31:47 PDT
Prefix all the things with WebCore::
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-05-09 23:34:16 PDT
<
rdar://problem/127862273
>
Dan Glastonbury
Comment 2
2024-05-09 23:36:50 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28379
EWS
Comment 3
2024-05-09 23:40:36 PDT
Committed
278604@main
(139468088633): <
https://commits.webkit.org/278604@main
> Reviewed commits have been landed. Closing PR #28379 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug