Unreviewed, fix the visionOS build after 278598@main https://bugs.webkit.org/show_bug.cgi?id=273990 rdar://127862273

Unreviewed build fix.

Prefix all the things with WebCore:: after using namespace WebCore was removed.

* Source/WebKit/Platform/ios/PlaybackSessionInterfaceLMK.h:
* Source/WebKit/Platform/ios/PlaybackSessionInterfaceLMK.mm:
(-[WKLinearMediaPlayerDelegate initWithModel:]):
(WebKit::PlaybackSessionInterfaceLMK::create):
(WebKit::PlaybackSessionInterfaceLMK::PlaybackSessionInterfaceLMK):
(WebKit::PlaybackSessionInterfaceLMK::rateChanged):
(WebKit::PlaybackSessionInterfaceLMK::seekableRangesChanged):
(WebKit::PlaybackSessionInterfaceLMK::audioMediaSelectionOptionsChanged):
(WebKit::PlaybackSessionInterfaceLMK::legibleMediaSelectionOptionsChanged):
* Source/WebKit/Platform/ios/VideoPresentationInterfaceLMK.h:
* Source/WebKit/Platform/ios/VideoPresentationInterfaceLMK.mm:
(WebKit::VideoPresentationInterfaceLMK::create):
(WebKit::VideoPresentationInterfaceLMK::VideoPresentationInterfaceLMK):
(WebKit::VideoPresentationInterfaceLMK::setupFullscreen):
(WebKit::VideoPresentationInterfaceLMK::setContentDimensions):
(WebKit::VideoPresentationInterfaceLMK::setupCaptionsLayer):

Canonical link: https://commits.webkit.org/278604@main